# agentsmith-1883b666

./: .env.example  README.md  build.sh  pyproject.toml
.github/workflows/: build-dmg.yml
src/weatherapp/: __init__.py  __main__.py  client.py  config.py  exceptions.py  gui.py  models.py
