[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherapp"
version = "0.1.0"
description = "A simple weather application with GUI"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "pillow",
]

[project.scripts]
weatherapp = "weatherapp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
